--- a/index.html
+++ b/index.html
@@ -28,77 +28,87 @@
         </nav>
     </header>
     <main class="MainIndex">
-        <section>
-            <section class="Slides">
-                <div class="Slide__js">
-                    <div class="Slides__slide Slides--1">
-                        <div class="Slides__header">
-                            <h2>PRÓXIMO CURSO <span>DESARROLLO WEB CON</span></h2>
-                        </div>
-                        <div class="Slides__body">
-                            <h3>HTML<span class="icon-html5"></span></h3>
-                            <h3>CSS<span class="icon-css3"></span></h3>
-                            <h3>JavaScript<span class="icon-javascript"></span></h3>
-                        </div>
-                        <div class="Slides__footer">
-                            <h4>Comienza 6 de mayo</h4>
-                            <a href="">INSCRIBIRSE</a>
-                        </div>
+        <section class="Slides">
+            <div class="Slide__js">
+                <div class="Slides__slide Slides--1">
+                    <div class="Slides__header">
+                        <h2>PRÓXIMO CURSO <span>DESARROLLO WEB CON</span></h2>
+                    </div>
+                    <div class="Slides__body">
+                        <h3>HTML<span class="icon-html5"></span></h3>
+                        <h3>CSS<span class="icon-css3"></span></h3>
+                        <h3>JavaScript<span class="icon-javascript"></span></h3>
+                    </div>
+                    <div class="Slides__footer">
+                        <h4>Comienza 6 de mayo</h4>
+                        <a href="">INSCRIBIRSE</a>
                     </div>
                 </div>
-                <div class="Slide__js">
-                    <div class="Slides__slide Slides--2">
-                        <div class="Slides__body">
-                            <article>
-                                <img src="img/responsive.png" alt="responsive">
-                                <div>
-                                    <h2>Responsive design</h2>
-                                    <p>Diseño adaptable a diferentes dispositivos.</p>
-                                </div>
-                            </article>
-                            <article>
-                                <img src="img/analitica.png" alt="analitica web">
-                                <div>
-                                    <h2>Analítica web</h2>
-                                    <p>Perfil de los visitantes.</p>
-                                    <p>Comportamiento de las visitas dentro del sitio.</p>
-                                </div>
-                            </article>
-                        </div>
-                        <div class="Slides__footer">
-                            <a href="">VER CURSO</a>
-                        </div>
+            </div>
+            <div class="Slide__js">
+                <div class="Slides__slide Slides--2">
+                    <div class="Slides__body">
+                        <article>
+                            <img src="img/responsive.png" alt="responsive">
+                            <div>
+                                <h2>Responsive design</h2>
+                                <p>Diseño adaptable a diferentes dispositivos.</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="img/analitica.png" alt="analitica web">
+                            <div>
+                                <h2>Analítica web</h2>
+                                <p>Perfil de los visitantes.</p>
+                                <p>Comportamiento de las visitas dentro del sitio.</p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="Slides__footer">
+                        <a href="">VER CURSO</a>
                     </div>
                 </div>
-                <div class="Slide__js">
-                    <div class="Slides__slide Slides--2 Slides--3">
-                        <div class="Slides__body">
-                            <article>
-                                <h2>http://</h2>
-                                <div>
-                                    <h2>Despliegue en servidor</h2>
-                                    <p>Hosting - Dominio</p>
-                                </div>
-                            </article>
-                            <article>
-                                <img src="img/pago.png" alt="pago online">
-                                <div>
-                                    <h2>Sistema de pago</h2>
-                                    <p>Pagos online.</p>
-                                    <p>Configuración Botón &copy;mercadopago.</p>
-                                </div>
-                            </article>
-                        </div>
-                        <div class="Slides__footer">
-                            <a href="">VER CURSO</a>
-                        </div>
+            </div>
+            <div class="Slide__js">
+                <div class="Slides__slide Slides--2 Slides--3">
+                    <div class="Slides__body">
+                        <article>
+                            <h2>http://</h2>
+                            <div>
+                                <h2>Despliegue en servidor</h2>
+                                <p>Hosting - Dominio</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="img/pago.png" alt="pago online">
+                            <div>
+                                <h2>Sistema de pago</h2>
+                                <p>Pagos online.</p>
+                                <p>Configuración Botón &copy;mercadopago.</p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="Slides__footer">
+                        <a href="">VER CURSO</a>
                     </div>
                 </div>
-                <a class="Slides__prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="Slides__next" onclick="plusSlides(1)">&#10095;</a>        
-
-            </section>
-        </section> 
+            </div>
+            <a class="Slides__prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="Slides__next" onclick="plusSlides(1)">&#10095;</a>        
+        </section>
+        <section class="Description">
+            <!-- DESCRIPCIÓN PRINCIPAL-->
+            <article>
+                <h2>Objetivo</h2>
+                <h3>del aprendizaje</h3>
+                <p>
+                    Proveer al alumno los conocimientos, 
+                    práctica y herramientas necesarias 
+                    para la creación y publicación de sitios web
+                                  
+                </p>
+            </article>
+        </section>
         <section>características</section> 
         <section>cursos</section> 
         <section>blog</section>
