features - cursos-link

--- a/index.html
+++ b/index.html
@@ -109,8 +109,73 @@
                 </p>
             </article>
         </section>
-        <section>características</section> 
-        <section>cursos</section> 
+
+        <section class="Features">
+            <!-- ÍCONOS -->
+            <article class="Features__article">
+                <span class="icon-pencil"></span>
+                <h4>Aprendizaje</h4>
+                <p>Compromiso con el alumno para que aplique lo aprendido</p>
+            </article>
+            <article class="Features__article">
+                <span class="icon-folder-open"></span>
+                <h4>Proyectos</h4>
+                <p>Proyectos reales para incorporar al portfolio</p>
+            </article>
+            <article class="Features__article">
+                <span class="icon-users"></span>
+                <h4>Soporte</h4>
+                <p>Permanente en redes y aulas virtuales</p>
+            </article>
+            <article>
+        </section>        
+        
+        <section class="CursosLink">
+            <h2 class="CursosLink__title">CURSOS</h2>
+            <div class="CursosLink__links">
+                <article>
+                    <div class="CursosLink__layerHover">
+                        <div class="CursosLink__contentHover">
+                            <p>Ingresá para consultar:</p>
+                            <p>&#10003; Temario</p>
+                            <p>&#10003; Video explicativo</p>
+                            <p>&#10003; Características</p>
+                            <p>Comienza 6 de junio</p>
+                            <p>Inscripciones abiertas</p>
+                            <a href="curso-html-css-js.html" class="button">VER CURSO</a>
+                        </div>
+                    </div>
+                    <figure>
+                        <img src="img/cursolinkHTML-CSS-JS.png" alt="">
+                        <h3>HTML, CSS & JS</h3>
+                    </figure>
+                </article>
+                <article>
+                    <div class="CursosLink__layerHover">
+                        <div class="CursosLink__contentHover">
+                            <p>PROXIMAMENTE</p>
+                            <!-- <a href="#" class="button">VER CURSO</a> -->
+                        </div>
+                    </div>
+                    <figure>
+                        <img src="img/cursolinkWpk-hbs-sass.png" alt="">
+                        <h3>Webpack SASS Handlebars STACK</h3>
+                    </figure>
+                </article>
+                <article>
+                <div class="CursosLink__layerHover">
+                    <div class="CursosLink__contentHover">
+                        <p>PROXIMAMENTE</p>
+                        <!-- <a href="article1.html" class="button">VER CURSO</a> -->
+                    </div>
+                </div>
+                <figure>
+                    <img src="img/cursolinkNode-mdb-exp.png" alt="">
+                    <h3>NodeJS Express MongoDB</h3>
+                </figure>
+            </article>
+            </div>
+        </section>    
         <section>blog</section>
     </main>
     <aside>
