--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
             <article>
         </section>        
         
-        <section class="CursosLink">
-            <h2 class="CursosLink__title">CURSOS</h2>
-            <div class="CursosLink__links">
-                <article>
-                    <div class="CursosLink__layerHover">
-                        <div class="CursosLink__contentHover">
+        <section class="Articulos">
+            <h2 class="Articulos__title">CURSOS</h2>
+            <div class="Articulos__links">
+                <article> <!-- position relative para posisionar absolute al hijo     width-->
+                    <div class="Articulos__layerHover"> <!-- capa que aparece al hacer hover azul mas claro -->
+                        <div class="Articulos__texto">  <!-- efecto de arriba hacia abajo -->
                             <p>Ingresá para consultar:</p>
                             <p>&#10003; Temario</p>
-                            <p>&#10003; Video explicativo</p>
+                            <p>&#10003; Video</p>
                             <p>&#10003; Características</p>
                             <p>Comienza 6 de junio</p>
                             <p>Inscripciones abiertas</p>
-                            <a href="curso-html-css-js.html" class="button">VER CURSO</a>
+                            <a href="curso-html-css-js.html" class="Articulos__button">VER CURSO</a>
                         </div>
                     </div>
                     <figure>
@@ -151,8 +151,8 @@
                     </figure>
                 </article>
                 <article>
-                    <div class="CursosLink__layerHover">
-                        <div class="CursosLink__contentHover">
+                    <div class="Articulos__layerHover">
+                        <div class="Articulos__texto">
                             <p>PROXIMAMENTE</p>
                             <!-- <a href="#" class="button">VER CURSO</a> -->
                         </div>
@@ -163,8 +163,8 @@
                     </figure>
                 </article>
                 <article>
-                <div class="CursosLink__layerHover">
-                    <div class="CursosLink__contentHover">
+                <div class="Articulos__layerHover">
+                    <div class="Articulos__texto">
                         <p>PROXIMAMENTE</p>
                         <!-- <a href="article1.html" class="button">VER CURSO</a> -->
                     </div>
@@ -175,7 +175,54 @@
                 </figure>
             </article>
             </div>
+        </section>
+        <section class="Articulos Articulos--blog">
+            <h2 class="Articulos__title">Blog</h2>
+            <div class="Articulos__links">
+                <article> <!-- position relative para posisionar absolute al hijo     width-->
+                    <div class="Articulos__layerHover"> <!-- capa que aparece al hacer hover azul mas claro -->
+                        <div class="Articulos__texto">  <!-- efecto de arriba hacia abajo -->
+                            <p>reseña</p>
+                            <p>&#10003; Temario</p>
+                            <p>&#10003; Video</p>
+                            <p>&#10003; Características</p>
+                            <p>Comienza 6 de junio</p>
+                            <p>Inscripciones abiertas</p>
+                            <a href="curso-html-css-js.html" class="Articulos__button">VER CURSO</a>
+                        </div>
+                    </div>
+                    <figure>
+                        <img src="img/cursolinkHTML-CSS-JS.png" alt="">
+                        <h3>articulo</h3>
+                    </figure>
+                </article>
+                <article>
+                    <div class="Articulos__layerHover">
+                        <div class="Articulos__texto">
+                            <p>PROXIMAMENTE</p>
+                            <!-- <a href="#" class="button">VER CURSO</a> -->
+                        </div>
+                    </div>
+                    <figure>
+                        <img src="img/cursolinkWpk-hbs-sass.png" alt="">
+                        <h3>articulo</h3>
+                    </figure>
+                </article>
+                <article>
+                <div class="Articulos__layerHover">
+                    <div class="Articulos__texto">
+                        <p>PROXIMAMENTE</p>
+                        <!-- <a href="article1.html" class="button">VER CURSO</a> -->
+                    </div>
+                </div>
+                <figure>
+                    <img src="img/cursolinkNode-mdb-exp.png" alt="">
+                    <h3>articulo</h3>
+                </figure>
+            </article>
+            </div>
         </section>    
+
         <section>blog</section>
     </main>
     <aside>
