--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>CursosIT</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="Header">
         <figure class="Header__figure">
@@ -94,7 +96,7 @@
                 </div>
             </div>
             <a class="Slides__prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="Slides__next" onclick="plusSlides(1)">&#10095;</a>        
+            <a class="Slides__next" onclick="plusSlides(1)">&#10095;</a>
         </section>
         <section class="Description">
             <!-- DESCRIPCIÓN PRINCIPAL-->
@@ -102,10 +104,10 @@
                 <h2>Objetivo</h2>
                 <h3>del aprendizaje</h3>
                 <p>
-                    Proveer al alumno los conocimientos, 
-                    práctica y herramientas necesarias 
+                    Proveer al alumno los conocimientos,
+                    práctica y herramientas necesarias
                     para la creación y publicación de sitios web
-                                  
+
                 </p>
             </article>
         </section>
@@ -128,14 +130,17 @@
                 <p>Permanente en redes y aulas virtuales</p>
             </article>
             <article>
-        </section>        
-        
+        </section>
+
         <section class="Articulos">
             <h2 class="Articulos__title">CURSOS</h2>
             <div class="Articulos__links">
-                <article> <!-- position relative para posisionar absolute al hijo     width-->
-                    <div class="Articulos__layerHover"> <!-- capa que aparece al hacer hover azul mas claro -->
-                        <div class="Articulos__texto">  <!-- efecto de arriba hacia abajo -->
+                <article>
+                    <!-- position relative para posisionar absolute al hijo     width-->
+                    <div class="Articulos__layerHover">
+                        <!-- capa que aparece al hacer hover azul mas claro -->
+                        <div class="Articulos__texto">
+                            <!-- efecto de arriba hacia abajo -->
                             <p>Ingresá para consultar:</p>
                             <p>&#10003; Temario</p>
                             <p>&#10003; Video</p>
@@ -163,25 +168,28 @@
                     </figure>
                 </article>
                 <article>
-                <div class="Articulos__layerHover">
-                    <div class="Articulos__texto">
-                        <p>PROXIMAMENTE</p>
-                        <!-- <a href="article1.html" class="button">VER CURSO</a> -->
+                    <div class="Articulos__layerHover">
+                        <div class="Articulos__texto">
+                            <p>PROXIMAMENTE</p>
+                            <!-- <a href="article1.html" class="button">VER CURSO</a> -->
+                        </div>
                     </div>
-                </div>
-                <figure>
-                    <img src="img/cursolinkNode-mdb-exp.png" alt="">
-                    <h3>NodeJS Express MongoDB</h3>
-                </figure>
-            </article>
+                    <figure>
+                        <img src="img/cursolinkNode-mdb-exp.png" alt="">
+                        <h3>NodeJS Express MongoDB</h3>
+                    </figure>
+                </article>
             </div>
         </section>
         <section class="Articulos Articulos--blog">
             <h2 class="Articulos__title">Blog</h2>
             <div class="Articulos__links">
-                <article> <!-- position relative para posisionar absolute al hijo     width-->
-                    <div class="Articulos__layerHover"> <!-- capa que aparece al hacer hover azul mas claro -->
-                        <div class="Articulos__texto">  <!-- efecto de arriba hacia abajo -->
+                <article>
+                    <!-- position relative para posisionar absolute al hijo     width-->
+                    <div class="Articulos__layerHover">
+                        <!-- capa que aparece al hacer hover azul mas claro -->
+                        <div class="Articulos__texto">
+                            <!-- efecto de arriba hacia abajo -->
                             <p>reseña</p>
                             <p>&#10003; Temario</p>
                             <p>&#10003; Video</p>
@@ -209,73 +217,62 @@
                     </figure>
                 </article>
                 <article>
-                <div class="Articulos__layerHover">
-                    <div class="Articulos__texto">
-                        <p>PROXIMAMENTE</p>
-                        <!-- <a href="article1.html" class="button">VER CURSO</a> -->
+                    <div class="Articulos__layerHover">
+                        <div class="Articulos__texto">
+                            <p>PROXIMAMENTE</p>
+                            <!-- <a href="article1.html" class="button">VER CURSO</a> -->
+                        </div>
                     </div>
-                </div>
-                <figure>
-                    <img src="img/cursolinkNode-mdb-exp.png" alt="">
-                    <h3>articulo</h3>
-                </figure>
-            </article>
+                    <figure>
+                        <img src="img/cursolinkNode-mdb-exp.png" alt="">
+                        <h3>articulo</h3>
+                    </figure>
+                </article>
             </div>
-        </section>    
+        </section>
     </main>
     <aside class="Aside">
         <section class="Aside__tabs">
             <ul>
-                <li><a href="javascript:void(0)" class="tablinks" onclick="openItem(event, 'tab1')"
-                        id="defaultOpen">Abierto</a>
+                <li><a href="javascript:void(0)" class="tablinks" onclick="openItem(event, 'tab1')" id="defaultOpen">Abierto</a>
                 <li><a href="javascript:void(0)" class="tablinks" onclick="openItem(event, 'tab2')">Próximo</a>
                 <li><a href="javascript:void(0)" class="tablinks" onclick="openItem(event, 'tab3')">Futuros</a>
             </ul>
 
             <div id="tab1" class="Aside__tabcontent">
-                <a href="curso-html-css-js.html">
-                    <h2 class="">
-                        HTML
-                        <span class="icon-html5"></span> 
-                        CSS
-                        <span class="icon-css3"></span>
-                        JavaScript
-                        <span class="icon-javascript"></span>
-                    </h2>
+                <h2 class="w400">
+                    HTML<span class="icon-html5"></span>
+                    CSS<span class="icon-css3"></span>
+                    JavaScript<span class="icon-javascript"></span>
+                </h2>
 
-                    <ul>
-                        <li>Además:</li>
-                        <li>&#10003; Git-Github</li>
-                        <li>&#10003; Gestión de proyectos</li>
-                        <li>&#10003; Despliegue</li>
-                        <li>&#10003; Analítica web</li>
-                    </ul>
-                </a>
+                <ul>
+                    <li class="green">Además:</li>
+                    <li><span class="green">&#10003;</span> Git-Github</li>
+                    <li><span class="green">&#10003;</span> Gestión de proyectos</li>
+                    <li><span class="green">&#10003;</span> Despliegue</li>
+                    <li><span class="green">&#10003;</span> Analítica web</li>
+                </ul>
             </div>
             <div id="tab2" class="Aside__tabcontent">
-                <a href="http://">
-                    <h2 class="">
-                        Webpack
-                        <span class="icon-webpack"></span> 
-                        Sass
-                        <span class="icon-sass"></span>
-                        Handlebars
-                        <span class="icon-hbs"></span>
+                    <h2 class="w400">
+                        Webpack<span class="icon-webpack"></span>
+                        Sass<span class="icon-sass"></span>
+                        Handlebars<span class="icon-hbs"></span>
                     </h2>
 
                     <ul>
-                        <li>&#10003; Sistema de bundling</li>
-                        <li>&#10003; Automatización de procesos</li>
-                        <li>&#10003; Preprocesadores CSS</li>
-                        <li>&#10003; Motores de plantillas</li>
+                        <li><span class="green">&#10003;</span> Sistema de bundling</li>
+                        <li><span class="green">&#10003;</span> Automatización de procesos</li>
+                        <li><span class="green">&#10003;</span> Preprocesadores CSS</li>
+                        <li><span class="green">&#10003;</span> Motores de plantillas</li>
                     </ul>
-                </a>
 
             </div>
 
             <div id="tab3" class="Aside__tabcontent">
                 <!-- <a href="http://"> -->
-                    <!-- <h2 class="">
+                <!-- <h2 class="">
                         NodeJS
                         <span class="icon-node-dot-js"></span> 
                         Express
@@ -284,14 +281,14 @@
                         <span class="icon-mongodb"></span>
                     </h2> -->
 
-                    <ul>
-                        <li>&#8226; NodeJS, Express, MongoDB</li>
-                        <li>&#8226; Progressive web app</li>
-                        <li>&#8226; React</li>
-                        <li>&#8226; React Native</li>
-                        <li>&#8226; VueJS</li>
-                        <li>&#8226; Electron</li>
-                    </ul>
+                <ul>
+                    <li><span class="green">&#8226;</span> NodeJS, Express, MongoDB</li>
+                    <li><span class="green">&#8226;</span> Progressive web app</li>
+                    <li><span class="green">&#8226;</span> React</li>
+                    <li><span class="green">&#8226;</span> React Native</li>
+                    <li><span class="green">&#8226;</span> VueJS</li>
+                    <li><span class="green">&#8226;</span> Electron</li>
+                </ul>
                 <!-- </a> -->
             </div>
         </section>
@@ -345,4 +342,5 @@
     <script src="js/script.js"></script>
 
 </body>
+
 </html>
